--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: findy-my_nanny # the name of this service, eg hello-world
+    name: find-nanny # the name of this service, eg hello-world
     env: ruby # this app is written in ruby
     plan: free # make sure to set this to free or you'll get billed $$$
     buildCommand: "./bin/render-build.sh" # # we already created these two files for you
@@ -8,7 +8,7 @@ services:
     envVars: # this section sets some ENV variables needed by Render for deployment
       - key: SECRET_KEY_BASE
         generateValue: true
-    - key: DATABASE_URL
+      - key: DATABASE_URL
         fromDatabase:
           name: db
           property: connectionString
